--- a/c_3_stack_queue/queue/Makefile
+++ b/c_3_stack_queue/queue/Makefile
@@ -1,6 +1,9 @@
 deque.out: main.o deque.o
-	gcc main.o deque.o -o deque.out
-main.o: main.c deque.h
-	gcc -c main.c
-deque.o: deque.c deque.h
-	gcc -c deque.c
+	gcc $^ -o $@
+
+main.o: deque.h
+deque.o: deque.h
+
+clean:
+	-rm *.o
+.PHONY: clean
