--- a/c_3_stack_queue/stack/Makefile
+++ b/c_3_stack_queue/stack/Makefile
@@ -1,6 +1,9 @@
 stack.out: stack.o main.o
-	gcc stack.o main.o -o stack.out
-stack.o: stack.c stack.h
-	gcc -c stack.c
-main.o: main.c stack.h
-	gcc -c main.c
+	gcc $^ -o $@
+
+stack.o: stack.h
+main.o: stack.h
+
+clean: 
+	-rm *.o
+.PHONY: clean
