add Makefile finish is_added

--- a/c_5_tree/binary_tree/Makefile
+++ b/c_5_tree/binary_tree/Makefile
@@ -1,10 +1,14 @@
 binary_tree.out: queue.o stack.o binary_tree.o main.o
-	gcc $^ -o $@
+	gcc $^ -g -o $@
 
-main.o: binary_tree.h
-queue.o: queue.h
-stack.o: stack.h
-binary_tree.o: binary_tree.h
+main.o: main.c binary_tree.h
+	gcc -c -g main.c
+queue.o: queue.c queue.h
+	gcc -c -g queue.c
+stack.o: stack.c stack.h
+	gcc -c -g stack.c
+binary_tree.o: binary_tree.c binary_tree.h
+	gcc -c -g binary_tree.c
 
 clean:
 	-rm *.o
